# VaultWealth-backend

./: .env  Cargo.toml  todo.md
migrations/: 20230821194920_create_base_tables.down.sql  20230821194920_create_base_tables.up.sql
src/: main.rs
src/controllers/: bank.rs  user.rs
src/middlewares/: auth.rs
src/models/: bank_related.rs  category.rs  mod.rs  response.rs  tag.rs  user.rs
src/services/: mod.rs
src/utils/: jwt.rs  password.rs
