[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.1"
axum = "0.6.20"
chrono = "0.4.26"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
nanoid = "0.4.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls","mysql","chrono" ] }
tokio = { version = "1.32.0", features = ["full"] }
